
 409.	[bug]		If named was shut down early in the startup
			process, ns_omapi_shutdown() would attempt to lock
			an unintialized mutex. [RT #262]

 408.	[bug]		stub zones could leak memory and reference counts if
			all the masters were unreachable.

 407.	[bug]		isc_rwlock_lock() would needlessly block
			readers when it reached the read quota even
			if no writers were waiting.

 406.	[bug]		Log messages were occasionally lost or corrupted
			due to a race condition in isc_log_doit().

 405.	[func]		Add support for selective forwarding (forward zones)

 404.	[bug]		The request library didn't completely work with IPv6.

 403.	[bug]		"host" did not use the search list.

 402.	[bug]		Treat undefined acls as errors, rather than
			warning and then later throwing an assertion.
			[RT #252]

 401.	[func]		Added simple database API.

 400.	[bug]		SIG(0) signing and verifying was done incorrectly.
			[RT #249]

 399.	[bug]		When reloading the server with a config file
			containing a syntax error, it could catch an
			assertion failure trying to perform zone
			maintenance on, or sending notifies from,
			tentatively created zones whose	views were
			never fully configured and lacked an address 
			database and request manager.

 398.	[bug]		"dig" sometimes caught an assertion failure when
			using TSIG, depending on the key length.

 397.	[func]		Added utility functions dns_view_gettsig() and
			dns_view_getpeertsig().

 396.	[doc]		There is now a man page for "nsupdate" 
			in doc/man/bin/nsupdate.8.

 395.	[bug]		nslookup printed incorrect RR type mnemonics
			for RRs of type >= 21 [RT #237].

 394.	[bug]		Current name was not propagated via $INCLUDE.

 393.	[func]		Initial answer while loading (awl) support.
			Entry points: dns_master_loadfileinc(),
			dns_master_loadstreaminc(), dns_master_loadbufferinc().
			Note: calls to dns_master_load*inc() should be rate
			be rate limited so as to not use up all file
			descriptors.
